Egress region chooser on connect tab in progress

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -9341,22 +9341,47 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
   color: #b94a48;
 }
 #EgressRegion {
-  width: 300px;
   display: block;
   position: static;
 }
-#EgressRegion .flag {
+#EgressRegionCombo {
+  position: absolute;
+  bottom: 0;
+}
+#EgressRegionCombo a {
+  padding-left: 0;
+  padding-right: 0;
+}
+#EgressRegionCombo ul {
+  height: 200px;
+  overflow-y: scroll;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+#EgressRegion,
+#EgressRegionCombo ul,
+#EgressRegionCombo .btn {
+  width: 300px;
+}
+#EgressRegion .flag,
+#EgressRegionCombo ul .flag,
+#EgressRegionCombo .btn .flag {
   display: block;
   width: auto;
   background-image: url(flags32.png);
   background-repeat: no-repeat;
   filter: none;
 }
-body[dir="ltr"] #EgressRegion .flag {
+body[dir="ltr"] #EgressRegion .flag,
+body[dir="ltr"] #EgressRegionCombo ul .flag,
+body[dir="ltr"] #EgressRegionCombo .btn .flag {
   padding: 0 0 0 40px;
   background-position-x: 5px;
 }
-body[dir="rtl"] #EgressRegion .flag {
+body[dir="rtl"] #EgressRegion .flag,
+body[dir="rtl"] #EgressRegionCombo ul .flag,
+body[dir="rtl"] #EgressRegionCombo .btn .flag {
   padding: 0 40px 0 0;
   background-position-x: 263px;
 }
@@ -9546,6 +9571,16 @@ img {
     .gainLayout { zoom: 1; }
     div { display: inline-block; }
     div { display: block; }
+
+    .ie7Hidden {
+      display: none;
+      visibility: hidden;
+      zoom: 1;
+    };
+
+    .ie7Remove {
+      /* Elements with this class get removed from DOM */
+    }
   </style>
   <![endif]-->
 
@@ -14787,7 +14822,10 @@ var g_initObj = {};
 })();
 
 $(function() {
-  setTimeout(HtmlCtrlInterface_AppReady, 100);
+  // Do some browser-version-dependent DOM pruning
+  if (browserCheck('lt-ie8')) {
+    $('.ie7Remove').remove();
+  }
 
   // Set the logo "info" link
   $('.logo a').attr('href', g_initObj.Config.InfoURL).attr('title', g_initObj.Config.InfoURL);
@@ -14823,6 +14861,8 @@ $(function() {
   });
   // ...and now.
   resizeContent();
+
+  setTimeout(HtmlCtrlInterface_AppReady, 100);
 });
 
 function resizeContent() {
@@ -14862,7 +14902,8 @@ $(function() {
     HtmlCtrlInterface_Stop();
   });
 
-  setupConnectToggle();
+  connectToggleSetup();
+  egressRegionComboSetup();
 
   // Update the size of our elements when the tab content element resizes...
   $('.main-height').on('resize', function() {
@@ -14889,11 +14930,11 @@ function resizeConnectContent() {
     }
   }
 
-  // Set the outer box to the correct height
-  //$('#connect-toggle').height($('#connect-toggle > *').outerHeight());
+  // Set the outer connect button div to the correct height
+  $('#connect-toggle').height($('#connect-toggle > *').outerHeight());
 }
 
-function setupConnectToggle() {
+function connectToggleSetup() {
   var opts = {
     lines: 10, // The number of lines to draw
     length: 6, // The length of each line
@@ -14962,6 +15003,56 @@ function cycleToggleClass(elem, cls, untilStateChangeFrom) {
   });
 }
 
+function egressRegionComboSetup() {
+  // Rather than duplicating the markup of the settings' egress region list, 
+  // we're going to copy it now.
+  $('#EgressRegionCombo ul').append($('ul#EgressRegion > *').clone());
+
+  // When an item in the combo is clicked, make the settings code do the work.
+  $('#EgressRegionCombo a').click(function(e) {
+    e.preventDefault();
+    var region = $(this).parents('[data-region]').data('region');
+    if (!region) {
+      return;
+    }
+
+    refreshSettings({
+      EgressRegion: region
+    });
+
+    applySettings();
+  });
+
+  // Have the combo track the state of the control in the settings pane.
+  $('#EgressRegion').on('change', function() {
+    var $activeItem;
+    // Copy the relevant classes to the combo items from the settings items.
+    var $regionItems = $('#EgressRegion li');
+    for (var i = 0; i < $regionItems.length; i++) {
+      var $regionItem = $regionItems.eq(i);
+      var region = $regionItem.data('region');
+      var hidden = $regionItem.hasClass('hidden');
+      var active = $regionItem.hasClass('active');
+
+      $('#EgressRegionCombo li[data-region="' + region + '"]')
+        .toggleClass('hidden', hidden)
+        .toggleClass('active', active);
+
+      if (active) {
+        $activeItem = $regionItem;
+      }
+    }
+
+    // Update the button
+    if ($activeItem) {
+      $('#EgressRegionCombo .btn span.flag')
+        .attr('data-i18n', $activeItem.find('a').data('i18n'))
+        .attr('class', $activeItem.find('a').attr('class'))
+        .text($activeItem.find('a').text());
+    }
+  });
+}
+
 
 /* SETTINGS ******************************************************************/
 
@@ -15019,11 +15110,6 @@ $(function settingsInit() {
       $(headingSelector).blur();
     });
 
-  // ...But the expand/collapse icon doesn't display properly on IE7, so just delete it.
-  if (browserCheck('lt-ie8')) {
-    $('.accordion-expand-icon').remove();
-  }
-
   // Some fields are disabled in VPN mode
   $('#VPN').change(vpnModeUpdate);
   vpnModeUpdate();
@@ -15044,36 +15130,43 @@ $(function settingsInit() {
     // (if changed).
     if ($('#settings-tab').hasClass('active') &&    // we were active
         !$(this).parent().is($('#settings-tab'))) { // we won't be active
-      var settingsJSON = settingsToJSON();
-      if (settingsJSON === false) {
-        // Settings are invalid. Expand the error sections and prevent switching tabs.
+      if (!applySettings()) {
+        // Something wrong with the settings.
         e.preventDefault();
-        showSettingsSection(
-          $('#settings-accordion .collapse .error').parents('.collapse').eq(0),
-          $('#settings-pane .error input').eq(0).focus());
-        return;
-      }
-      else if (settingsJSON !== g_initialSettingsJSON) {
-        // Settings have changed -- update them in the application (and trigger a reconnect).
-        HtmlCtrlInterface_SaveSettings(settingsJSON);
       }
     }
   });
 
   updateAvailableEgressRegions(false); // don't force valid -- haven't filled in settings yet
+
+  // Fill in the settings.
   refreshSettings();
 });
+
+// Save the current settings (and possible reconnect).
+function applySettings() {
+  var settingsJSON = settingsToJSON();
+  if (settingsJSON === false) {
+    // Settings are invalid. Expand the error sections and prevent switching tabs.
+    showSettingsSection(
+      $('#settings-accordion .collapse .error').parents('.collapse').eq(0),
+      $('#settings-pane .error input').eq(0).focus());
+    return false;
+  }
+  else if (settingsJSON !== g_initialSettingsJSON) {
+    // Settings have changed -- update them in the application (and trigger a reconnect).
+    HtmlCtrlInterface_SaveSettings(settingsJSON);
+  }
+
+  return true;
+}
 
 // Refresh the current settings. If newSettings is truthy, it will become the 
 // the new current settings, otherwise the existing current settings will be 
 // refreshed in the UI.
+// newSettings can be a partial settings object (like, just {egressRegion: "US"} or whatever).
 function refreshSettings(newSettings) {
-  newSettings = newSettings || g_initObj.Settings;
-  var oldDefaults = g_initObj.Settings.defaults;
-  g_initObj.Settings = newSettings;
-  if (!g_initObj.Settings.defaults) {
-    g_initObj.Settings.defaults = oldDefaults;
-  }
+  g_initObj.Settings = $.extend(g_initObj.Settings, newSettings || {});
   fillSettingsValues(g_initObj.Settings);
 
   // When the settings change, we need to check the current egress region choice.
@@ -15121,7 +15214,7 @@ function fillSettingsValues(obj) {
   if (typeof(obj.EgressRegion) !== 'undefined') {
     var region = obj.EgressRegion || BEST_REGION_VALUE;
     $('#EgressRegion [data-region]').removeClass('active');
-    $('#EgressRegion').find('[data-region="' + region + '"]').addClass('active');
+    $('#EgressRegion').find('[data-region="' + region + '"] a').click();
   }
 }
 
@@ -15142,11 +15235,6 @@ function settingsToJSON() {
     return false;
   }
 
-  var egressRegion = $('#EgressRegion li.active').data('region');
-  if (!egressRegion || egressRegion === BEST_REGION_VALUE) {
-    egressRegion = '';
-  }
-
   var returnValue = {
     VPN: $('#VPN').prop('checked') ? 1 : 0,
     SplitTunnel: $('#SplitTunnel').prop('checked') ? 1 : 0,
@@ -15155,7 +15243,7 @@ function settingsToJSON() {
     UpstreamProxyHostname: $('#UpstreamProxyHostname').val(),
     UpstreamProxyPort: validatePort($('#UpstreamProxyPort').val()),
     SkipUpstreamProxy: $('#SkipUpstreamProxy').prop('checked') ? 1 : 0,
-    EgressRegion: egressRegion
+    EgressRegion: $('#EgressRegion li.active').data('region')
   };
 
   return JSON.stringify(returnValue);
@@ -15190,6 +15278,7 @@ function egressRegionSetup() {
     $('#EgressRegion [data-region]').removeClass('active');
     $(this).parents('[data-region]').addClass('active');
     egressRegionValid(false);
+    $('#EgressRegion').trigger('change');
   });
 }
 
@@ -15255,6 +15344,8 @@ function updateAvailableEgressRegions(forceValid) {
   if (forceValid) {
     forceEgressRegionValid();
   }
+
+  $('#EgressRegion').trigger('change');
 }
 
 // Will be called exactly once. Set up event listeners, etc.
@@ -16231,6 +16322,23 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
             </div><!-- /disconnected -->
 
           </div><!-- /connect-toggle -->
+
+          <div>
+            <div class="btn-group dropup" id="EgressRegionCombo">
+              <a class="btn btn-large dropdown-toggle f32" data-toggle="dropdown" href="#">
+                <span data-i18n-ltr-classes="pull-left" data-i18n-rtl-classes="pull-right">
+                  <span class="flag us">
+                    Action
+                  </span>
+                </span>
+                <i class="icon-caret-up"
+                   data-i18n-ltr-classes="pull-right" data-i18n-rtl-classes="pull-left"></i>
+              </a>
+              <ul class="control-group dropdown-menu f32" role="menu">
+                <!-- filled in dynamically -->
+             </ul>
+            </div>
+          </div>
         </div><!-- /connection-pane -->
 
 
@@ -16257,7 +16365,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   <span data-i18n="settings#split-tunnel#heading">
                     Split Tunnel
                   </span>
-                  <i class="accordion-expand-icon icon-collapse"
+                  <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
                   <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-ban-circle"></i>
@@ -16299,7 +16407,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   <span data-i18n="settings#egress-region#heading">
                     Psiphon Server Region
                   </span>
-                  <i class="accordion-expand-icon icon-collapse"
+                  <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
                   <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-ban-circle"></i>
@@ -16337,7 +16445,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                                 Best Performance
                               </a>
                             </li>
-                            <li class="divider"></li>
+                            <li class="divider ie7Remove"></li>
                             <li data-region="US">
                               <a href="#" tabindex="-1" class="flag us"
                                  data-i18n="settings#egress-region#select-us">
@@ -16375,7 +16483,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                               </a>
                             </li>
                           </ul>
-                        </div>
+                        </div><!--/.dropdown-->
                       </div>
                     </fieldset>
                   </form>
@@ -16390,7 +16498,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   <span data-i18n="settings#local-proxy-ports#heading">
                     Local Proxy Ports
                   </span>
-                  <i class="accordion-expand-icon icon-collapse"
+                  <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
                   <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-ban-circle"></i>
@@ -16450,7 +16558,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   <span data-i18n="settings#upstream-proxy#heading">
                     Upstream Proxy
                   </span>
-                  <i class="accordion-expand-icon icon-collapse"
+                  <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
                   <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-ban-circle"></i>
@@ -16522,7 +16630,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   <span data-i18n="settings#transport-mode#heading">
                     Transport Mode
                   </span>
-                  <i class="accordion-expand-icon icon-collapse"
+                  <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
                 </a>
               </div>
