Fixed RTL for egress region combo

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -9389,13 +9389,13 @@ body[dir="ltr"] #EgressRegion .flag,
 body[dir="ltr"] #EgressRegionCombo ul .flag,
 body[dir="ltr"] #EgressRegionCombo .btn .flag {
   padding: 0 0 0 40px;
-  background-position-x: 5px;
+  background-position-x: 1%;
 }
 body[dir="rtl"] #EgressRegion .flag,
 body[dir="rtl"] #EgressRegionCombo ul .flag,
 body[dir="rtl"] #EgressRegionCombo .btn .flag {
   padding: 0 40px 0 0;
-  background-position-x: 263px;
+  background-position-x: 99%;
 }
 .f16 .unknown {
   background-image: url(flag_unknown_16.png) !important;
